# Lambda-REST-Client

./: LICENSE  main.py  pyproject.toml
.github/workflows/: publish.yml
lambda_rest_client/: __init__.py  main.py
